# TA-robotics

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/collaborative_gen2/lib/collaborative_gen2/: client_a  client_b
install/collaborative_gen2/share/collaborative_gen2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gen2_moveit_config/share/gen2_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gen2_moveit_config/share/gen2_moveit_config/cmake/: gen2_moveit_configConfig.cmake
install/gen2_moveit_config/share/gen2_moveit_config/config/: joint_limits.yaml  move_group.yaml  moveit_controllers.yaml  ros2_controllers.yaml
install/gen2_moveit_config/share/gen2_moveit_config/launch/: move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  simulation.launch.py  (+1 more)
install/kinova_description/share/kinova_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/collaborative_gen2/: CMakeLists.txt
src/collaborative_gen2/launch/: server.launch.py
src/collaborative_gen2/src/: central_server.cpp  client_orient.cpp  client_pos.cpp  gui_client_a.py  gui_client_b.py
src/gen2_moveit_config/: .setup_assistant  CMakeLists.txt
src/gen2_moveit_config/config/: j2n6s300.srdf  ompl_planning.yaml  ros2_controllers.yaml
src/gen2_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/kinova_description/: CMakeLists.txt
src/kinova_description/urdf/: j2n6s300_standalone.xacro
(+5 files in other folders)
